--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 
   <h1>Kitchen</h1>
   <ul>
-    <% for _, order in ipairs(orders) do %>
-      <li>
-        <%= order.text %> - <%= order.status %>
-      </li>
-    <% end %>
+    Order 
   </ul>
 </body>
     </html>
